--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "iview": "^2.9.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
