--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "iview": "^2.9.2",
+    "lodash": "^4.17.5",
     "vue": "^2.5.2",
+    "vue-resource": "^1.4.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
